--- a/css/especialidades.css
+++ b/css/especialidades.css
@@ -42,7 +42,7 @@ body {
     list-style: none;
     width: 20px;
     height: 20px;
-    background: rgba(0, 13, 255, 0.24);
+    background: linear-gradient(145deg, rgba(48, 65, 84, 0.058), rgba(70, 90, 120, 0.074));
     animation: animate 25s linear infinite;
     bottom: -150px;
 }
